[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moonlight-ai"
version = "0.1.10"
description = "Lightweight AI Agents SDK for building intelligent automation systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ecstra", email = "themythbustertmb@gmail.com"}
]
keywords = [
    "ai", "agents", "automation", "sdk", "rag", "llm",
    "artificial-intelligence", "openai", "deepseek", "groq",
    "web-search", "document-processing", "qdrant", "embeddings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.61.1",
    "playwright>=1.50.0",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "python-docx>=1.1.2",
    "PyPDF2>=3.0.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.3",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "html2text>=2024.2.26",
    "crawl4ai>=0.4.248",
    "qdrant-client>=1.16.0",
    "tiktoken>=0.12.0",
    "transformers>=4.45.0",
    "nltk>=3.9.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
pptx = ["python-pptx>=1.0.0"]

[project.urls]
Homepage = "https://github.com/ecstra/moonlight"
Repository = "https://github.com/ecstra/moonlight"
Documentation = "https://github.com/ecstra/moonlight#readme"
"Bug Tracker" = "https://github.com/ecstra/moonlight/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["moonlight*"]
exclude = ["tests*", "*.egg-info*", "build*", "dist*", "__pycache__*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]
"moonlight.core.processors" = ["nltk_data/**/*"]
"moonlight.core.token" = [".token_cache/.gitkeep"]